# ionsim

./: .gitignore  .gitlab-ci.yml  README.md  mypy.ini  pyproject.toml  sandia-claudecode  setup.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: stochastic_gate_errors-checkpoint.ipynb  stochastic_gate_errors-from-modules-checkpoint.ipynb  stochastic_gate_errors-with-Jays-input-checkpoint.ipynb
docs/source/: conf.py  index.rst  ionsim.atomic_internal_energy_level.rst  ionsim.basis.rst  ionsim.collective_motional_energy_level.rst  ionsim.config.rst  ionsim.coupling.rst  ionsim.custom_math.rst  ionsim.custom_types.rst  ionsim.degree_of_freedom.rst  ionsim.energy_level.rst  ionsim.hamiltonian.rst  ionsim.ionsim_error.rst  ionsim.named_operators.rst  ionsim.noise.rst  ionsim.process.rst  ionsim.rst  ionsim.state.rst  make_stubs.py  stub_package_template.txt  stub_template.txt
examples/: R_gate_interpolation.py  example_simulated_R_gate.py  example_simulated_R_gate_numba.ipynb  example_simulated_multimode_MS_gate.py  example_spin_dependent_squeezing.py
examples/gst/: 1Q_GST_example.py  1Q_gst_sequence.gstdata  example_1Q_gst.py  graph_negll_iterations.py
examples/ions/: example_simulated_R_gate.py
examples/neutral_atoms/: 171Yb_helper_calculations.py  1Q_gate.py
examples/style/: plot_style_data.txt
src/IonSim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ionsim/: .gitignore  GST_data_parser.py  __init__.py  api.py  atomic_internal_energy_level.py  basis.py  collective_motional_energy_level.py  composite_operator.py  config.py  constants.py  coupling.py  custom_math.py  custom_types.py  degree_of_freedom.py  dissipator.py  energy_level.py  energy_shift_operator.py  gate_interpolant.py  gate_set_tomography.py  gst.py  gst_circuit_parser.py  gst_circuit_planner.py  io.py  (+14 more)
tests/: run_all_tests.sh  test_api.py  test_basis.py  test_coupling.py  test_custom_math.py  test_degree_of_freedom.py  test_dissipators.py  test_hamiltonian.py  test_mode_analysis.py  test_named_operators.py  test_noise.py  test_operator.py  test_process.py  test_state.py  test_testing.py  test_zeeman_solver.py
(+32 files in other folders)
